# Hypergraph-Coding-Agent-Framework

./: .README.md.swp  .gitignore  AGENTS.md  Agentic-Memory.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Coding_4_Whitepaper.md   DEVELOPMENT.md  GEMINI.md  HACF-install.sh  HACF-uninstall.sh  MasterSOP.md  README.md  SECURITY.md  Troubleshooting.md  Tutorial.md  Whitepaper.md  install.sh  pyproject.toml  requirements.txt  skills-info.md  uninstall.sh
.agent/scripts/: archive_specs.py  hypergraph_updater.py
.agent/skills/: architect.md
.agents/config/: heuristic_rules.yaml
.agents/install-templates/: AGENTS.md  CLAUDE.md  GEMINI.md
.agents/memory/: activeContext.md
.agents/rules/: package-management.md  python.md  testing.md
.agents/schemas/: META_template.md  MiniPRD_template.md  PRD_Template.md  SuperPRD_Template.md  final_truth_template.md  hypergraph_schema.md
.agents/schemas/project-templates/: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  SECURITY.md  pyproject.toml
.agents/scripts/: ceiling_enforcer.py  ceiling_resolver.py  compaction_engine.py  heuristic_classifier.py  hyper_daemon.py  hyper_fix.py  hyper_orchestrator.py  hyper_resolve_conflict.py  hyper_update_core.py  hyper_update_merge_engine.py  hyper_update_recovery.py  hyper_update_verification.py  (+10 more)
.claude/: settings.json
.clinerules/: hypergraph-agent.md  package-management.md  python.md  security.md  testing.md
docs/: MIGRATION_RULES.md  MasterSOP.md  Troubleshooting.md  Tutorial.md  Whitepaper.md
(+188 files in other folders)
